# django-separated

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  setup.py
separated/: __init__.py  admin.py  tests.py  utils.py  views.py
