[tool.poetry]
name = "django-separated"
version = "1.1.2"
description = "Class-based view and mixins for handling CSV with Django."
keywords = [
         "django",
         "csv",
         "class-based",
         "views"
         ]
classifiers = [
            "Development Status :: 4 - Beta",
            "Framework :: Django",
            "Intended Audience :: Developers",
            "License :: OSI Approved :: BSD License",
            "Topic :: Internet :: WWW/HTTP",
            "Programming Language :: Python",
            "Programming Language :: Python :: 2.6",
            "Programming Language :: Python :: 2.7",
            "Programming Language :: Python :: 3.2",
            "Programming Language :: Python :: 3.3"
            ]
homepage = "https://github.com/fusionbox/django-separated"
authors = ["Fusionbox, Inc. <programmers@fusionbox.com>"]
readme = "README.rst"
packages = [
    { include = "separated" },
]

[tool.poetry.dependencies]
python = "*"
django = ">=1.3"
unicodecsv = "*"
