[tool.poetry]
name = "django-separated"
version = "1.1.4"
description = "Class-based view and mixins for handling CSV with Django."
keywords = [
         "django",
         "csv",
         "class-based",
         "views"
         ]
classifiers = [
            "Development Status :: 4 - Beta",
            "Framework :: Django",
            "Intended Audience :: Developers",
            "License :: OSI Approved :: BSD License",
            "Topic :: Internet :: WWW/HTTP",
            "Programming Language :: Python",
            "Programming Language :: Python :: 2.6",
            "Programming Language :: Python :: 2.7",
            "Programming Language :: Python :: 3.2",
            "Programming Language :: Python :: 3.3"
            ]
homepage = "https://github.com/fusionbox/django-separated"
authors = ["Fusionbox, Inc. <programmers@fusionbox.com>"]
readme = "README.rst"
packages = [
    { include = "separated" },
]

[tool.poetry.dependencies]
python = "^3.9.6"
unicodecsv = "^0.14.1"
Django = "^4.0.3"
pre-commit = "^2.17.0"

[tool.poetry.group.dev.dependencies]
commitizen = "^2.36.0"


[tool.commitizen]
name = "cz_conventional_commits"
version = "1.1.4"
tag_format = "$version"
changelog_start_rev = "1.1.2"
version_files = [
  "pyproject.toml:version",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
